SERVER-58861 Fix ephemeralForTest on Big Endian machines.

IndexDataEntry::create in ephemeralForTest now writes in machine endian as that is how it reads.